[package]
name = "jsonwebtoken-jwks-cache"
version = "0.1.0"
edition = "2024"
authors = ["Kostas Petrikas"]
license = "MIT"
readme = "README.md"
description = "Resilient and blazingly fast async JWK Set cache"
homepage = "https://github.com/expl/rs-jsonwebtoken-jwks-cache"
repository = "https://github.com/expl/rs-jsonwebtoken-jwks-cache"
keywords = ["jwt", "api", "token", "jwk"]
rust-version = "1.85.0"

[dependencies]
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio = { version = "1.0", default-features = false }
http = "1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "brotli", "json"] }
http-cache-semantics = { version = "2", default-features = false, features = ["reqwest"]}
spin = "0.10"
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"